# pytest-bdd-demo

./: .gitignore  README.md  START_HERE.md  pyproject.toml  run_server.py
.github/workflows/: test.yml
src/app/: auth.py  web.py
src/app/templates/: admin.html  base.html  dashboard.html  login.html
tests/: conftest.py  test_api_endpoints.py
tests/steps/: test_login_steps.py  test_login_ui_steps.py
tests/steps/features/: login.feature  login_ui.feature
